added several plots

--- a/template/layouts/default.haml
+++ b/template/layouts/default.haml
@@ -8,4 +8,15 @@
     %script{:type => 'text/javascript', :src => 'jquery.js'}
     %script{:type => 'text/javascript', :src => 'jquery.tablesorter.js'}
   %body
+    %ul
+      %li
+        %a{:href => 'index.html'} General
+      %li
+        %a{:href => 'activity.html'} Activity
+      %li
+        %a{:href => 'authors.html'} Authors
+      %li
+        %a{:href => 'files.html'} Files
+      %li
+        %a{:href => 'lines.html'} Lines
     = content
