some styling updates

--- a/template/partials/commits_per_month.haml
+++ b/template/partials/commits_per_month.haml
@@ -4,7 +4,7 @@
   });
 %h1 Commits by month of year
 %img{ :src => 'commits_per_month.png' }
-%table#month_table.tablesorter
+%table#month_table.tablesorter.striped
   %thead
     %tr
       %th Month
