--- a/template/partials/commits_per_year.haml
+++ b/template/partials/commits_per_year.haml
@@ -2,23 +2,28 @@
   $(document).ready(function() {
     $("#year_table").tablesorter({sortList: [[0, 0]]});
   });
-%h1 Commits by year
-%img{ :src => 'commits_per_year.png' }
-%table#year_table.tablesorter
-  %thead
-    %tr
-      %th Year
-      %th Commits
-      %th Files added
-      %th Files deleted
-      %th Lines added
-      %th Lines deleted
-  %tbody
-    - stats.year_stats.years.each do |year, commits|
-      %tr
-        %td&= year
-        %td&= commits.commits
-        %td&= commits.files_added
-        %td&= commits.files_deleted
-        %td&= commits.lines_added
-        %td&= commits.lines_deleted
+
+%h2.blockheader
+  Commits by year
+.blockcontainer
+  .blockdiagram
+    %img{ :src => 'commits_per_year.png' }
+  .blocktable
+    %table#year_table.tablesorter.striped
+      %thead
+        %tr
+          %th Year
+          %th Commits
+          %th Files added
+          %th Files deleted
+          %th Lines added
+          %th Lines deleted
+      %tbody
+        - stats.year_stats.years.each do |year, commits|
+          %tr
+            %td&= year
+            %td&= commits.commits
+            %td&= commits.files_added
+            %td&= commits.files_deleted
+            %td&= commits.lines_added
+            %td&= commits.lines_deleted
