--- a/template/partials/commits_per_yearmonth.haml
+++ b/template/partials/commits_per_yearmonth.haml
@@ -4,7 +4,7 @@
   });
 %h1 Commits by month/year
 %img{ :src => 'commits_per_yearmonth.png' }
-%table#yearmonth_table.tablesorter
+%table#yearmonth_table.tablesorter.striped
   %thead
     %tr
       %th Year-Month
