--- a/template/partials/day_of_week.haml
+++ b/template/partials/day_of_week.haml
@@ -1,2 +1,5 @@
-%h1 Day of week
-%img{ :src => 'commits_per_wday.png' }
+%h2.blockheader
+  Day of week
+.blockcontainer
+  .blockdiagram
+    %img{ :src => 'commits_per_wday.png' }
