--- a/template/partials/hour_of_day.haml
+++ b/template/partials/hour_of_day.haml
@@ -1,2 +1,5 @@
-%h1 Hour of day
-%img{ :src => 'commits_per_hour.png' }
+%h2.blockheader
+  Hour of day
+.blockcontainer
+  .blockdiagram
+    %img{ :src => 'commits_per_hour.png' }
