--- a/template/partials/commits_per_month.haml
+++ b/template/partials/commits_per_month.haml
@@ -7,7 +7,8 @@
 .blockcontainer
   .blockdiagram
     %img{ :src => 'commits_per_month.png' }
-  .blocktable
+  %a.toggle{:href => '#'} Table
+  .blocktable.toggleable
     %table#month_table.tablesorter.striped
       %thead
         %tr
