--- a/template/layouts/default.haml
+++ b/template/layouts/default.haml
@@ -16,15 +16,16 @@
           return false;
         });
       });
-    %ul
-      %li
-        %a{:href => 'index.html'} General
-      %li
-        %a{:href => 'activity.html'} Activity
-      %li
-        %a{:href => 'authors.html'} Authors
-      %li
-        %a{:href => 'files.html'} Files
-      %li
-        %a{:href => 'lines.html'} Lines
-    = content
+    #menu
+      %ul
+        %li.first
+          %a{:href => 'index.html'} General
+        %li
+          %a{:href => 'activity.html'} Activity
+        %li
+          %a{:href => 'authors.html'} Authors
+        %li
+          %a{:href => 'files.html'} Files
+        %li.last
+          %a{:href => 'lines.html'} Lines
+    #content= content
