added block support

--- a/template/activity.haml
+++ b/template/activity.haml
@@ -1,8 +1,3 @@
 - layout :default
-= partial :hour_of_day
-= partial :day_of_week
-= partial :hour_of_week
-= partial :commits_per_year
-= partial :commits_per_month
-= partial :commits_per_yearmonth
+= blocks :hour_of_day, :day_of_week, :hour_of_week, :commits_per_year, :commits_per_month, :commits_per_yearmonth
 
