--- a/template/authors.haml
+++ b/template/authors.haml
@@ -1,4 +1,2 @@
 - layout :default
-= partial :authors
-= partial :top_authors_of_year
-= partial :top_authors_of_yearmonth
+= blocks :authors, :top_authors_of_year, :top_authors_of_yearmonth
