--- a/template/files.haml
+++ b/template/files.haml
@@ -1,3 +1,2 @@
 - layout :default
-= partial :files_by_yearmonth
-= partial :filechanges_by_yearmonth
+= blocks :files_by_yearmonth, :filechanges_by_yearmonth
