--- a/template/lines.haml
+++ b/template/lines.haml
@@ -1,3 +1,2 @@
 - layout :default
-= partial :lines_by_yearmonth
-= partial :linechanges_by_yearmonth
+= blocks :lines_by_yearmonth, :linechanges_by_yearmonth
