--- a/template/partials/filechanges_by_yearmonth.haml
+++ b/template/partials/filechanges_by_yearmonth.haml
@@ -1,5 +1,3 @@
-%h2.blockheader
-  Filechanges by year-month
-.blockcontainer
+- block(:filechanges_by_yearmonth) do
   .blockdiagram
     %img{ :src => 'filechanges_by_yearmonth.png' }
