--- a/template/partials/files_by_yearmonth.haml
+++ b/template/partials/files_by_yearmonth.haml
@@ -1,5 +1,3 @@
-%h2.blockheader
-  Files by year-month
-.blockcontainer
+- block(:files_by_yearmonth) do
   .blockdiagram
     %img{ :src => 'files_by_yearmonth.png' }
