--- a/template/partials/hour_of_day.haml
+++ b/template/partials/hour_of_day.haml
@@ -1,5 +1,3 @@
-%h2.blockheader
-  Hour of day
-.blockcontainer
+- block(:hour_of_day) do
   .blockdiagram
     %img{ :src => 'commits_per_hour.png' }
