--- a/template/partials/hour_of_week.haml
+++ b/template/partials/hour_of_week.haml
@@ -1,7 +1,5 @@
 - names = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
-%h2.blockheader
-  Hour of week
-.blockcontainer
+- block(:hour_of_week) do
   .blocktable
     %table
       %thead
