--- a/template/partials/linechanges_by_yearmonth.haml
+++ b/template/partials/linechanges_by_yearmonth.haml
@@ -1,5 +1,3 @@
-%h2.blockheader
-  Linechanges by year-month
-.blockcontainer
+- block(:linechanges_by_yearmonth) do
   .blockdiagram
     %img{ :src => 'linechanges_by_yearmonth.png' }
