--- a/template/partials/lines_by_yearmonth.haml
+++ b/template/partials/lines_by_yearmonth.haml
@@ -1,5 +1,3 @@
-%h2.blockheader
-  Lines by year-month
-.blockcontainer
+- block(:lines_by_yearmonth) do
   .blockdiagram
     %img{ :src => 'lines_by_yearmonth.png' }
