--- a/template/partials/top_authors_of_year.haml
+++ b/template/partials/top_authors_of_year.haml
@@ -1,7 +1,5 @@
 - i = 0
-%h2.blockheader
-  Author of year
-.blockcontainer
+- block(:top_authors_of_year) do
   .blocktable
     %table
       %thead
