--- a/template/partials/top_authors_of_yearmonth.haml
+++ b/template/partials/top_authors_of_yearmonth.haml
@@ -1,7 +1,5 @@
 - i = 0
-%h2.blockheader
-  Author of month
-.blockcontainer
+- block(:top_authors_of_yearmonth) do
   .blocktable
     %table
       %thead
