--- a/template/partials/day_of_week.haml
+++ b/template/partials/day_of_week.haml
@@ -1,5 +1,3 @@
-%h2.blockheader
-  Day of week
-.blockcontainer
+- block(:day_of_week) do
   .blockdiagram
     %img{ :src => 'commits_per_wday.png' }
