added file stats support

--- a/template/files.haml
+++ b/template/files.haml
@@ -1,2 +1,2 @@
 - layout :default
-= blocks :files_by_yearmonth, :filechanges_by_yearmonth
+= blocks :files_by_yearmonth, :filechanges_by_yearmonth, :filetypes
