--- a/template/partials/general.haml
+++ b/template/partials/general.haml
@@ -1,22 +1,28 @@
+- commits = stats.general_stats.commits
+- age = ((stats.general_stats.last_commit - stats.general_stats.first_commit + 86399) / 86400).to_i
+- active = stats.general_stats.days
 - block(:general) do
   .blocktable
     %table.simpletable
       %tbody
         %tr
+          %th Generation time
+          %td&= Time.now.to_s
+        %tr
           %th Authors
-          %td= stats.num_authors
+          %td= '%d (average %.1f commits per author)' % [stats.num_authors, commits / stats.num_authors]
         %tr
           %th Commits
-          %td= stats.general_stats.commits
+          %td= '%d (average %.1f commits per active day, %.1f per all days)' % [commits, commits / active, commits / age]
         %tr
           %th Files
           %td= '%d (%d added, %d deleted)' % [stats.general_stats.files, stats.general_stats.files_added, stats.general_stats.files_deleted]
         %tr
-          %th Size
-          %td= '%d bytes' % stats.file_stats.size
-        %tr
           %th Lines
           %td= '%d (%d added, %d deleted)' % [stats.general_stats.lines, stats.general_stats.lines_added, stats.general_stats.lines_deleted]
+        %tr
+          %th Size
+          %td= '%d bytes' % stats.file_stats.size
         %tr
           %th First commit
           %td= stats.general_stats.first_commit.to_s
@@ -25,6 +31,4 @@
           %td= stats.general_stats.last_commit.to_s
         %tr
           %th Age
-          - age = ((stats.general_stats.last_commit - stats.general_stats.first_commit + 86399) / 86400).to_i
-          - active = stats.general_stats.days
           %td= '%d / %d active days (%.2f%%)' % [active, age, active * 100.0 / age.to_f]
