--- a/template/layouts/default.haml
+++ b/template/layouts/default.haml
@@ -5,6 +5,7 @@
     %title
       Statistics
     %link{:href => 'style.css', :rel => 'stylesheet', :type => 'text/css'}
+    %meta{'http-equiv' => 'content-type', :content => 'text/html; charset=UTF-8'}
     %script{:type => 'text/javascript', :src => 'jquery.js'}
     %script{:type => 'text/javascript', :src => 'jquery.tablesorter.js'}
   %body
