added day_of_week table, hour_of_day table, and lastweeks table

--- a/template/partials/day_of_week.haml
+++ b/template/partials/day_of_week.haml
@@ -1,3 +1,29 @@
+:javascript
+  $(document).ready(function() {
+    $("#dayofweek_table").tablesorter();
+  });
+- names = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
 - block(:day_of_week) do
   .blockdiagram
     %img{ :src => 'commits_per_wday.png' }
+  %a.toggle{:href => '#'} Table
+  .blocktable.toggleable
+    %table#dayofweek_table.tablesorter.striped
+      %thead
+        %tr
+          %th Weekday
+          %th Commits
+          %th Files added
+          %th Files deleted
+          %th Lines added
+          %th Lines deleted
+      %tbody
+        - for wday in 0..6
+          - s = stats.wday_stats[(wday + 1) % 7]
+          %tr
+            %th&= names[wday]
+            %td&= (s.nil? ? 0 : s.commits)
+            %td&= (s.nil? ? 0 : s.files_added)
+            %td&= (s.nil? ? 0 : s.files_deleted)
+            %td&= (s.nil? ? 0 : s.lines_added)
+            %td&= (s.nil? ? 0 : s.lines_deleted)
