--- a/template/partials/hour_of_week.haml
+++ b/template/partials/hour_of_week.haml
@@ -1,4 +1,3 @@
-- names = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
 - block(:hour_of_week) do
   .blocktable
     %table
@@ -13,7 +12,7 @@
             - i2[1].commits > r2 ? i2[1].commits : r2
         - for wday in 0..6
           %tr
-            %th= names[wday]
+            %th= weekday(wday)
             - for hour in 0..23
               - d = stats.wday_stats[(wday + 1) % 7]
               - s = d.nil? ? nil : d[hour]
