--- a/template/lines.haml
+++ b/template/lines.haml
@@ -1,2 +1,2 @@
 - layout :default
-= blocks :lines_by_yearmonth, :linechanges_by_yearmonth
+= blocks :lineschart, :lines_by_yearmonth, :linechanges_by_yearmonth
