--- a/template/activity.haml
+++ b/template/activity.haml
@@ -1,3 +1,3 @@
 - layout :default
-= blocks :lastweeks, :hour_of_day, :day_of_week, :hour_of_week, :commits_per_year, :commits_per_month, :commits_per_yearmonth
+= blocks :lastweeks, :hour_of_day, :day_of_week, :hour_of_week, :commitchart, :commits_per_year, :commits_per_month, :commits_per_yearmonth
 
