disabled looseZoom on charts

--- a/template/partials/commitchart.haml
+++ b/template/partials/commitchart.haml
@@ -44,7 +44,7 @@
       cursor: {
         show: true,
         zoom: true,
-        looseZoom: true,
+        looseZoom: false,
         constrainZoomTo: 'x',
         showTooltip: true,
         tooltipLocation: 'sw',
